fix: change vh to percent to prevent navbar overlap on mobile

--- a/src/components/Loading/Loading.module.scss
+++ b/src/components/Loading/Loading.module.scss
@@ -4,7 +4,7 @@
   right: 0;
   z-index: 100;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   align-items: center;
   background-color: var(--transparent-black);
