--- a/src/pages/login/Login/Login.module.scss
+++ b/src/pages/login/Login/Login.module.scss
@@ -3,7 +3,7 @@
 .container {
   margin: 0 auto;
   max-width: $body-max-width;
-  height: 100vh;
+  height: 100%;
   background: rgb(63, 94, 251);
   background: linear-gradient(
     180deg,
