--- a/src/pages/play/Play.module.scss
+++ b/src/pages/play/Play.module.scss
@@ -3,7 +3,7 @@
 
 .container {
   background: radial-gradient(50% 50% at 50% 50%, #a659fe 0%, #6f53fd 100%);
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   padding-bottom: 30px;
